--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
           <button type="button" class="profile__add-button"></button>
       </section>
 
-      <section class="">
+      <section class="elements">
 
       </section>
+
+      <footer class="footer">
+        <p class="footer__copyright">© 2020 Mesto Russia</p>
+      </footer>
+    </div>
 
 
 
