feat: add section card

--- a/index.html
+++ b/index.html
@@ -33,7 +33,39 @@
           <button type="button" class="profile__add-button"></button>
       </section>
 
-      <section class="elements">
+      <section class="cards">
+        <ul class="elements">
+          <li class="elements__card">
+            <img class="elements__image" src="./images/element-karachaevsk.jpg" alt="Карачаевск">
+            <p class="elements__discription">Карачаевск</p>
+            <button class="elements__button-like" type="button"></button>
+          </li>
+          <li class="elements__card">
+            <img class="elements__image" src="./images/element-elbrus.png" alt="Эльбрус">
+            <p class="elements__discription">Гора Эльбрус</p>
+            <button class="elements__button-like" type="button"></button>
+          </li>
+          <li class="elements__card">
+            <img class="elements__image" src="./images/element-dombay.png" alt="Домбай">
+            <p class="elements__discription">Домбай</p>
+            <button class="elements__button-like" type="button"></button>
+          </li>
+          <li class="elements__card">
+            <img class="elements__image" src="./images/element-elbrus.png" alt="Эльбрус">
+            <p class="elements__discription">Гора Эльбрус</p>
+            <button class="elements__button-like" type="button"></button>
+          </li>
+          <li class="elements__card">
+            <img class="elements__image" src="./images/element-dombay.png" alt="Домбай">
+            <p class="elements__discription">Домбай</p>
+            <button class="elements__button-like" type="button"></button>
+          </li>
+          <li class="elements__card">
+            <img class="elements__image" src="./images/element-karachaevsk.jpg" alt="Карачаево-Черкесская">
+            <p class="elements__discription">Карачаево-Ч...</p>
+            <button class="elements__button-like" type="button"></button>
+          </li>
+        </ul>
 
       </section>
 
