feat: finish html & css

--- a/index.html
+++ b/index.html
@@ -19,54 +19,61 @@
 
       <section class="profile">
         <div class="profile__container">
-          <div class="profile__avatar-wrapp">
-            <img class="profile__avatar" src="./images/avatar-profile.png" alt="Аватар">
-          </div>
+          <img class="profile__avatar" src="./images/avatar-profile.png" alt="Аватар">
           <div class="profile__info">
-            <div class="profile__info-wrapp">
+            <div class="profile__name-button">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
               <button class="profile__edit-button" type="button"></button>
             </div>
             <p class="profile__description">Исследователь океана</p>
           </div>
         </div>
-          <button type="button" class="profile__add-button"></button>
+        <button type="button" class="profile__add-button"></button>
       </section>
 
-      <section class="cards">
-        <ul class="elements">
-          <li class="elements__card">
-            <img class="elements__image" src="./images/element-karachaevsk.jpg" alt="Карачаевск">
-            <p class="elements__discription">Карачаевск</p>
-            <button class="elements__button-like" type="button"></button>
-          </li>
-          <li class="elements__card">
-            <img class="elements__image" src="./images/element-elbrus.png" alt="Эльбрус">
-            <p class="elements__discription">Гора Эльбрус</p>
-            <button class="elements__button-like" type="button"></button>
-          </li>
-          <li class="elements__card">
-            <img class="elements__image" src="./images/element-dombay.png" alt="Домбай">
-            <p class="elements__discription">Домбай</p>
-            <button class="elements__button-like" type="button"></button>
-          </li>
-          <li class="elements__card">
-            <img class="elements__image" src="./images/element-elbrus.png" alt="Эльбрус">
-            <p class="elements__discription">Гора Эльбрус</p>
-            <button class="elements__button-like" type="button"></button>
-          </li>
-          <li class="elements__card">
-            <img class="elements__image" src="./images/element-dombay.png" alt="Домбай">
-            <p class="elements__discription">Домбай</p>
-            <button class="elements__button-like" type="button"></button>
-          </li>
-          <li class="elements__card">
-            <img class="elements__image" src="./images/element-karachaevsk.jpg" alt="Карачаево-Черкесская">
-            <p class="elements__discription">Карачаево-Ч...</p>
-            <button class="elements__button-like" type="button"></button>
-          </li>
-        </ul>
-
+      <section class="elements">
+          <div class="element">
+            <img class="element__image" src="./images/element-karachaevsk.jpg" alt="Карачаевск">
+            <div class="element__discription">
+              <h2 class="element__title">Карачаевск</h2>
+              <button class="element__button-like" type="button"></button>
+            </div>
+          </div>
+          <div class="element">
+            <img class="element__image" src="./images/element-elbrus.png" alt="Эльбрус">
+            <div class="element__discription">
+              <h2 class="element__title">Гора Эльбрус</h2>
+              <button class="element__button-like" type="button"></button>
+            </div>
+          </div>
+          <div class="element">
+            <img class="element__image" src="./images/element-dombay.png" alt="Домбай">
+            <div class="element__discription">
+              <h2 class="element__title">Домбай</h2>
+              <button class="element__button-like" type="button"></button>
+            </div>
+          </div>
+          <div class="element">
+            <img class="element__image" src="./images/element-elbrus.png" alt="Эльбрус">
+            <div class="element__discription">
+              <h2 class="element__title">Гора Эльбрус</h2>
+              <button class="element__button-like" type="button"></button>
+            </div>
+          </div>
+          <div class="element">
+            <img class="element__image" src="./images/element-dombay.png" alt="Домбай">
+            <div class="element__discription">
+              <h2 class="element__title">Домбай</h2>
+              <button class="element__button-like" type="button"></button>
+            </div>
+          </div>
+          <div class="element">
+            <img class="element__image" src="./images/element-karachaevsk.jpg" alt="Карачаево-Черкесия">
+            <div class="element__discription">
+              <h2 class="element__title">Карачаево-Черкесия</h2>
+              <button class="element__button-like" type="button"></button>
+            </div>
+          </div>
       </section>
 
       <footer class="footer">
