--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="element">
             <img class="element__image" src="./images/element-dombay.png" alt="Домбай">
             <div class="element__discription">
-              <h2 class="element__title">Домбай</h2>
+              <h2 class="element__title">Домбай dsadasdsad</h2>
               <button type="button" class="element__button-like"></button>
             </div>
           </div>
