--- a/index.html
+++ b/index.html
@@ -32,48 +32,15 @@
       </section>
 
       <section class="elements">
-          <div class="element">
-            <img class="element__image" src="./images/element-karachaevsk.jpg" alt="Карачаевск">
+        <template id="element-template">
+          <article class="element">
+            <img class="element__image" src="#" alt="">
             <div class="element__discription">
-              <h2 class="element__title">Карачаевск</h2>
+              <h2 class="element__title"></h2>
               <button type="button" class="element__button-like"></button>
             </div>
-          </div>
-          <div class="element">
-            <img class="element__image" src="./images/element-elbrus.png" alt="Эльбрус">
-            <div class="element__discription">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button type="button" class="element__button-like"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img class="element__image" src="./images/element-dombay.png" alt="Домбай">
-            <div class="element__discription">
-              <h2 class="element__title">Домбай</h2>
-              <button type="button" class="element__button-like"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img class="element__image" src="./images/element-elbrus.png" alt="Эльбрус">
-            <div class="element__discription">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button type="button" class="element__button-like"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img class="element__image" src="./images/element-dombay.png" alt="Домбай">
-            <div class="element__discription">
-              <h2 class="element__title">Домбай dsadasdsad</h2>
-              <button type="button" class="element__button-like"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img class="element__image" src="./images/element-karachaevsk.jpg" alt="Карачаево-Черкесия">
-            <div class="element__discription">
-              <h2 class="element__title">Карачаево-Черкесия</h2>
-              <button type="button" class="element__button-like"></button>
-            </div>
-          </div>
+          </article>
+        </template>
       </section>
 
       <footer class="footer">
@@ -90,6 +57,18 @@
           <input type="text" name="name" class="popup__input popup__input_value_name" value="">
           <input type="text" name="description" class="popup__input popup__input_value_description" value="">
           <button type="submit" class="popup__save-button">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup-add-card"> 
+      <div class="popup__container">
+        <button type="button" class="popup__close-button popup-add-card__close-button"></button>
+        <h2 class="popup__title">Новое место</h2>
+        <form class="popup__form popup-add-card__form" name="form">
+          <input type="text" name="title" class="popup__input popup__input_value_title" value="" placeholder="Название">
+          <input type="text" name="link" class="popup__input popup__input_value_link" value="" placeholder="Ссылка на картинку">
+          <button type="submit" class="popup__save-button popup-add-card__save-button">Создать</button>
         </form>
       </div>
     </div>
