--- a/index.html
+++ b/index.html
@@ -32,15 +32,38 @@
       </section>
 
       <section class="elements">
-        <template id="element-template">
-          <article class="element">
-            <img class="element__image" src="#" alt="">
-            <div class="element__discription">
-              <h2 class="element__title"></h2>
-              <button type="button" class="element__button-like"></button>
-            </div>
-          </article>
-        </template>
+        <article class="element">
+          <button type="button" class="element__button-delete"></button>
+          <img class="element__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
+          <div class="element__discription">
+            <h2 class="element__title">Архыз</h2>
+            <button type="button" class="element__button-like"></button>
+          </div>
+        </article>
+        <article class="element">
+          <button type="button" class="element__button-delete"></button>
+          <img class="element__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
+          <div class="element__discription">
+            <h2 class="element__title">Архыз</h2>
+            <button type="button" class="element__button-like"></button>
+          </div>
+        </article>
+        <article class="element">
+          <button type="button" class="element__button-delete"></button>
+          <img class="element__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
+          <div class="element__discription">
+            <h2 class="element__title">Архыз</h2>
+            <button type="button" class="element__button-like"></button>
+          </div>
+        </article>
+        <article class="element">
+          <button type="button" class="element__button-delete"></button>
+          <img class="element__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
+          <div class="element__discription">
+            <h2 class="element__title">Архыз</h2>
+            <button type="button" class="element__button-like"></button>
+          </div>
+        </article>
       </section>
 
       <footer class="footer">
@@ -72,6 +95,17 @@
         </form>
       </div>
     </div>
+
+    <template id="element-template">
+      <article class="element">
+        <button type="button" class="element__button-delete"></button>
+        <img class="element__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
+        <div class="element__discription">
+          <h2 class="element__title">Архыз</h2>
+          <button type="button" class="element__button-like"></button>
+        </div>
+      </article>
+    </template>
 
   <script src="./scripts/index.js"></script>
   
