--- a/index.html
+++ b/index.html
@@ -32,38 +32,7 @@
       </section>
 
       <section class="elements">
-        <article class="element">
-          <button type="button" class="element__button-delete"></button>
-          <img class="element__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
-          <div class="element__discription">
-            <h2 class="element__title">Архыз</h2>
-            <button type="button" class="element__button-like"></button>
-          </div>
-        </article>
-        <article class="element">
-          <button type="button" class="element__button-delete"></button>
-          <img class="element__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
-          <div class="element__discription">
-            <h2 class="element__title">Архыз</h2>
-            <button type="button" class="element__button-like"></button>
-          </div>
-        </article>
-        <article class="element">
-          <button type="button" class="element__button-delete"></button>
-          <img class="element__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
-          <div class="element__discription">
-            <h2 class="element__title">Архыз</h2>
-            <button type="button" class="element__button-like"></button>
-          </div>
-        </article>
-        <article class="element">
-          <button type="button" class="element__button-delete"></button>
-          <img class="element__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
-          <div class="element__discription">
-            <h2 class="element__title">Архыз</h2>
-            <button type="button" class="element__button-like"></button>
-          </div>
-        </article>
+       
       </section>
 
       <footer class="footer">
@@ -96,12 +65,20 @@
       </div>
     </div>
 
+    <div class="popup-picture">
+      <div class="popup-picture__element">
+        <button type="button" class="popup__close-button popup-picture__close-button"></button>
+        <img src="" class="popup-picture__image" alt="">
+        <h2 class="popup-picture__title"></h2>
+      </div>
+    </div>
+
     <template id="element-template">
       <article class="element">
         <button type="button" class="element__button-delete"></button>
-        <img class="element__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
+        <img class="element__image" src="" alt="">
         <div class="element__discription">
-          <h2 class="element__title">Архыз</h2>
+          <h2 class="element__title"></h2>
           <button type="button" class="element__button-like"></button>
         </div>
       </article>
