--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </section>
 
       <section class="elements">
-       
+
       </section>
 
       <footer class="footer">
@@ -65,10 +65,10 @@
       </div>
     </div>
 
-    <div class="popup-picture">
+    <div class="popup popup-picture">
       <div class="popup-picture__element">
-        <button type="button" class="popup__close-button popup-picture__close-button"></button>
-        <img src="" class="popup-picture__image" alt="">
+        <button type="button" class="popup-picture__close-button"></button>
+        <img src="#" class="popup-picture__image" alt="">
         <h2 class="popup-picture__title"></h2>
       </div>
     </div>
@@ -76,7 +76,7 @@
     <template id="element-template">
       <article class="element">
         <button type="button" class="element__button-delete"></button>
-        <img class="element__image" src="" alt="">
+        <img class="element__image" src="#" alt="">
         <div class="element__discription">
           <h2 class="element__title"></h2>
           <button type="button" class="element__button-like"></button>
