--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
     </main>
 
-    <div class="popup"> 
+    <div class="popup profile-popup">
       <div class="popup__container">
         <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="form">
+        <form class="popup__form" name="profile-form">
           <input type="text" name="name" class="popup__input popup__input_value_name" value="">
           <input type="text" name="description" class="popup__input popup__input_value_description" value="">
           <button type="submit" class="popup__save-button">Сохранить</button>
@@ -57,7 +57,7 @@
       <div class="popup__container">
         <button type="button" class="popup__close-button popup-add-card__close-button"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form popup-add-card__form" name="form">
+        <form class="popup__form popup-add-card__form" name="card-form">
           <input type="text" name="title" class="popup__input popup__input_value_title" value="" placeholder="Название">
           <input type="text" name="link" class="popup__input popup__input_value_link" value="" placeholder="Ссылка на картинку">
           <button type="submit" class="popup__save-button popup-add-card__save-button">Создать</button>
@@ -67,7 +67,7 @@
 
     <div class="popup popup-picture">
       <div class="popup-picture__element">
-        <button type="button" class="popup-picture__close-button"></button>
+        <button type="button" class="popup__close-button popup-picture__close-button"></button>
         <img src="#" class="popup-picture__image" alt="">
         <h2 class="popup-picture__title"></h2>
       </div>
