--- a/index.html
+++ b/index.html
@@ -45,11 +45,20 @@
       <div class="popup__container">
         <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="profile-form">
-          <input type="text" name="name" class="popup__input popup__input_value_name" value="">
-          <input type="text" name="description" class="popup__input popup__input_value_description" value="">
-          <button type="submit" class="popup__save-button">Сохранить</button>
+
+        <form class="popup__form" name="profile-form" novalidate>
+
+
+          <input id="form__input-name" type="text" name="name" class="popup__input popup__input_value_name" value="" minlength="2" maxlength="40" required>
+          <span class="form__span form__input-name-error"></span>
+
+          <input id="form__input-description" type="text" name="description" class="popup__input popup__input_value_description" value="" minlength="2" maxlength="200" required>
+          <span class="form__span form__input-description-error"></span>
+
+          <button type="submit" class="popup__save-button form__submit">Сохранить</button>
+
         </form>
+
       </div>
     </div>
 
@@ -57,11 +66,19 @@
       <div class="popup__container">
         <button type="button" class="popup__close-button popup-add-card__close-button"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form popup-add-card__form" name="card-form">
-          <input type="text" name="title" class="popup__input popup__input_value_title" value="" placeholder="Название">
-          <input type="text" name="link" class="popup__input popup__input_value_link" value="" placeholder="Ссылка на картинку">
-          <button type="submit" class="popup__save-button popup-add-card__save-button">Создать</button>
+
+        <form class="popup__form popup-add-card__form" name="card-form" novalidate>
+
+            <input id="form__input-title" type="text" name="title" class="popup__input popup__input_value_title" value="" placeholder="Название" minlength="2" maxlength="30" required>
+            <span class="form__span form__input-title-error"></span>
+
+            <input id="form__input-link" type="url" name="link" class="popup__input popup__input_value_link" value="" placeholder="Ссылка на картинку" required>
+            <span class="form__span form__input-link-error"></span>
+
+            <button type="submit" class="popup__save-button popup-add-card__save-button form__submit">Создать</button>
+
         </form>
+          
       </div>
     </div>
 
@@ -84,7 +101,9 @@
       </article>
     </template>
 
+  <script src="./scripts/cards.js"></script>
   <script src="./scripts/index.js"></script>
+  <script src="./scripts/validate.js"></script>
   
   </body>
 </html>
