--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
 
-        <form class="popup__form" name="profile-form" novalidate>
+        <form class="form popup__form" name="profile-form" novalidate>
 
 
           <input id="form__input-name" type="text" name="name" class="popup__input popup__input_value_name" value="" minlength="2" maxlength="40" required>
@@ -67,7 +67,7 @@
         <button type="button" class="popup__close-button popup-add-card__close-button"></button>
         <h2 class="popup__title">Новое место</h2>
 
-        <form class="popup__form popup-add-card__form" name="card-form" novalidate>
+        <form class="form popup__form popup-add-card__form" name="card-form" novalidate>
 
             <input id="form__input-title" type="text" name="title" class="popup__input popup__input_value_title" value="" placeholder="Название" minlength="2" maxlength="30" required>
             <span class="form__span form__input-title-error"></span>
