--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
     </div>
 
-    <template id="element-template">
+    <template class="element-template">
       <article class="element">
         <button type="button" class="element__button-delete"></button>
         <img class="element__image" src="#" alt="">
@@ -101,9 +101,9 @@
       </article>
     </template>
 
-  <script src="./scripts/cards.js"></script>
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <!-- <script src="./scripts/cards.js"></script> -->
+  <script type="module" src="./scripts/index.js"></script>
+  <!-- <script src="./scripts/validate.js"></script> -->
   
   </body>
 </html>
