--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
 
-        <form class="form popup__form popup-profile__form" name="profile-form" novalidate>
-
+        <form class="form popup__form popup__form-profile" name="profile-form" novalidate>
 
           <input id="form__input-name" type="text" name="name" class="popup__input popup__input_value_name" value="" minlength="2" maxlength="40" required>
           <span class="form__span form__input-name-error"></span>
