--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
 
         <form class="form popup__form popup-add-card__form" name="card-form" novalidate>
 
-            <input id="form__input-title" type="text" name="title" class="popup__input popup__input_value_title" value="" placeholder="Название" minlength="2" maxlength="30" required>
+            <input id="form__input-title" type="text" name="name" class="popup__input popup__input_value_title" value="" placeholder="Название" minlength="2" maxlength="30" required>
             <span class="form__span form__input-title-error"></span>
 
             <input id="form__input-link" type="url" name="link" class="popup__input popup__input_value_link" value="" placeholder="Ссылка на картинку" required>
