--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Яндекс практикум - четвертый спринт">
     <meta name="keywords" content="место">
     <meta name="author" content="Ivan Ko">
-    <!-- <link rel="stylesheet" href="pages/index.css"> -->
+    <link rel="stylesheet" href="pages/index.css">
     <title>Место</title>
   </head>
   <body class="page">
@@ -81,6 +81,23 @@
       </div>
     </div>
 
+    <div class="popup popup-avatar"> 
+      <div class="popup__container">
+        <button type="button" class="popup__close-button popup-avatar__close-button"></button>
+        <h2 class="popup__title">Обновить аватар</h2>
+
+        <form class="form popup__form popup-avatar__form" name="avatar-form" novalidate>
+
+            <input id="form__input-link" type="url" name="link" class="popup__input popup__input_value_link" value="" placeholder="Ссылка на аватар" required>
+            <span class="form__span form__input-link-error"></span>
+
+            <button type="submit" class="popup__save-button popup-add-card__save-button form__submit">Создать</button>
+
+        </form>
+          
+      </div>
+    </div>
+
     <div class="popup popup-picture">
       <div class="popup-picture__element">
         <button type="button" class="popup__close-button popup-picture__close-button"></button>
@@ -100,8 +117,11 @@
       </article>
     </template>
 
-  <!-- <script type="module" src="./pages/index.js"></script> -->
+  <script type="module" src="./pages/index.js"></script>
   
   </body>
 </html>
+
+<!-- Токен: 52773b91-72f0-4734-8d45-05b772d3e059
+Идентификатор группы: cohort-51 -->
 
