--- a/src/index.html
+++ b/src/index.html
@@ -91,8 +91,8 @@
 
         <form class="form popup__form popup-avatar__form" name="avatar-form" novalidate>
 
-            <input id="form-avatar__input-link" type="url" name="avatar" class="popup__input popup__input_value_link" value="" placeholder="Ссылка на аватар" required>
-            <span class="form__span form__input-link-error"></span>
+            <input id="form__input-avatar-link" type="url" name="avatar" class="popup__input popup__input_value_link" value="" placeholder="Ссылка на аватар" required>
+            <span class="form__span form__input-avatar-link-error"></span>
 
             <button type="submit" class="popup__save-button popup-avatar__save-button form__submit">Сохранить</button>
 
